Modified readme and refactored setEnv properties model
